# CSC417_final_project

./: CMakeLists.txt  README.md
includes/: B-spline.h  EigenTypes.h  Grid.h  Particle.h  Scene.h  Shape.h  SimConstants.h  SnowObject.h  SnowSimulation.h  main.h
src/: B-spline.cpp  Grid.cpp  Particle.cpp  Scene.cpp  Shape.cpp  SnowObject.cpp  SnowSimulation.cpp  main.cpp
